--- a/projects/johndoe/index.html
+++ b/projects/johndoe/index.html
@@ -95,8 +95,8 @@
 					</ul>
 				</div>
 				<div class="finished-course">
-					<p>Ukończyłem kurs Easy Code</p>
-					<a href=""><img src="graphic/easy_code_button.png" alt="easy-code"></a>
+					<p>I have the HTML academy certificate!</p>
+					<a href=""><img src="graphic/custom_button.png" alt="easy-code"></a>
 				</div>
 			</div>
 			<div class="skills">
