--- a/index-ru.html
+++ b/index-ru.html
@@ -106,6 +106,9 @@
 			<span>Моё скромное портфолио</span>
 			<div class="portfolio">
 				<div class="p-block">
+					<a href="projects/johndoe/index.html" target="_blank"><img src="img/sm-img0.JPG" alt="business"></a>
+				</div>
+				<div class="p-block">
 					<a href="projects/business/index.html" target="_blank"><img src="img/sm-img2.jpg" alt="business"></a>
 				</div>
 				<div class="p-block">
