--- a/index-eng.html
+++ b/index-eng.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Michal-WD</title>
+	<title>Michal-ST</title>
 	<meta property="og:type" content="website">
     <meta property="og:title" content="Michal-WD Web-Developer">
     <meta property="og:description" content="Webmaster Web-Developer Pages Frontend">
@@ -147,7 +147,7 @@
 					</div>
 				</div>	
 				<div class="by">
-					<span>Michal-WD &copy; 2017</span>
+					<span>Michal-ST &copy; 2019</span>
 				</div>
 			</div>
 		</div>
