--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<span>Moje skromne portfolio</span>
 			<div class="portfolio">
 				<div class="p-block">
-					<a href="projects/johndoe/index.html" target="_blank"><img src="img/sm-img0.JPG" alt="business"></a>
+					<a href="projects/johndoe/index.html" target="_blank"><img src="img/sm-img0.jpg" alt="business"></a>
 				</div>
 				<div class="p-block">
 					<a href="projects/business/index.html" target="_blank"><img src="img/sm-img2.jpg" alt="business"></a>
