--- a/projects/johndoe/index.html
+++ b/projects/johndoe/index.html
@@ -122,35 +122,35 @@
 		<span class="under-desc">My essentials</span>
 		<div class="tools-technologies">
 			<div>
-				<img src="graphic/tools/react.png" alt="react">
+				<img src="graphic/tools/react.PNG" alt="react">
 				<span>React<br/>16.6.3</span>
 			</div>
 			<div>
-				<img src="graphic/tools/webpack.png" alt="webpack">
+				<img src="graphic/tools/webpack.PNG" alt="webpack">
 				<span>Webpack<br/>4.19.1</span>
 			</div>
 			<div>
-				<img src="graphic/tools/express.png" alt="express">
+				<img src="graphic/tools/express.PNG" alt="express">
 				<span>Express<br/>4.16.4</span>
 			</div>
 			<div class="styled-tool">
-				<img src="graphic/tools/styled2.png" alt="styled">
+				<img src="graphic/tools/styled2.PNG" alt="styled">
 				<span>Styled components<br/>4.16.4</span>
 			</div>
 			<div>
-				<img src="graphic/tools/redux.png" alt="redux">
+				<img src="graphic/tools/redux.PNG" alt="redux">
 				<span>Redux<br/>4.0.1</span>
 			</div>
 			<div>
-				<img src="graphic/tools/flexbox.png" alt="Flexbox">
+				<img src="graphic/tools/flexbox.PNG" alt="Flexbox">
 				<span>Flexbox<br/>4.0.1</span>
 			</div>
 			<div>
-				<img src="graphic/tools/tool1.png" alt="program v1">
+				<img src="graphic/tools/tool1.PNG" alt="program v1">
 				<span>Program<br/>5.2.1</span>
 			</div>
 			<div>
-				<img src="graphic/tools/tool1.png" alt="program v2">
+				<img src="graphic/tools/tool1.PNG" alt="program v2">
 				<span>Program<br/>5.2.2</span>
 			</div>
 		</div>
